Fix Clippy's tooltip on some pages

--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -22,7 +22,7 @@
 
 @mixin tooltip-tail {
   background: url($url-tooltip-tail) no-repeat !important;
-  height: 16px !important;
+  height: 17px !important;
   width: 10px !important;
   border-bottom: none !important;
   border-top: none !important;
